--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ nav li {
 
 .navbar{
   text-align: center;
-  background-color: rgba(70, 69, 141, 1); 
+  background-color: rgba(70, 69, 141, 1);
 }
 
 #myPhoto{
@@ -31,7 +31,67 @@ nav li {
   text-align: center; 
 }
 
+#schoolConteud{
+  width: 100%;
+  display: flex;   
+  justify-content: space-around;
+  margin-top: 1%;
+}
 
+#schoolTitle{
+text-align: center;
+color: black;
+}
+
+p, li, h1, h2{
+  color: white;
+}
+
+#tecnic{
+  border: 2px solid black;
+  border-radius: 10px;
+  background: rgba(31, 31, 37, 1);
+  padding: 20px;
+}
+
+#university{
+  border: 2px solid black;
+  border-radius: 10px;
+  background: rgba(31, 31, 37, 1);
+  padding: 20px;
+}
+
+#workTitle{
+  color: black;
+  text-align: center;
+}
+
+#workConteud{
+  color: black;
+  display: flex;
+  justify-content: space-around;
+}
+
+#eptv{
+  border: 2px solid black;
+  border-radius: 10px;
+  background: rgba(31, 31, 37, 1);
+  padding: 20px;
+  width: 300px;
+
+}
+
+#juventude{
+  border: 2px solid black;
+  border-radius: 10px;
+  background: rgba(31, 31, 37, 1);
+  padding: 20px;
+  width: 300px;
+}
+
+#work{
+  background-color: rgba(40, 39, 129, 1);
+}
 
 table {
     font-family: arial, sans-serif;
